fix: refactor data directory mapping processing Refactor RoqDataReaderProcessor to produce DataMappingBuildItem for directory-based mappings, deferring bean production to RoqDataConverterProcessor. This enables more consistent data binding and fixes incorrect processing order for @DataMapping (OBJECT_DIR/ARRAY_DIR).
Fixes #911